--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 /src/main/resources/leonids-*.json
 
 HELP.md
-.gradle/
-/build/
-/out/
-/logs/
+.gradle
+build/
+logs/
 !gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**
+!**/src/test/**
 
 ### STS ###
 .apt_generated
@@ -17,11 +18,11 @@ HELP.md
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea/
+.idea
 *.iws
 *.iml
 *.ipr
-/out/
+out/
 
 ### NetBeans ###
 /nbproject/private/
