--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-/src/main/resources/leob-*.json
-
 HELP.md
 .gradle
 build/
-logs/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**
-!**/src/test/**
+!**/src/main/**/build/
+!**/src/test/**/build/
+logs/
 
 ### STS ###
 .apt_generated
@@ -23,6 +21,8 @@ logs/
 *.iml
 *.ipr
 out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
 ### NetBeans ###
 /nbproject/private/
@@ -33,3 +33,8 @@ out/
 
 ### VS Code ###
 .vscode/
+bin/
+
+### System ###
+.DS_Store
+
