--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,8 +2,10 @@ spring:
   h2:
     console:
       enabled: true
+  sql:
+    init:
+      platform: h2
   datasource:
-    platform: h2
     driverClassName: org.h2.Driver
     url: jdbc:h2:mem:test;MODE=PostgreSQL
 api:
