--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,7 @@ configurations {
 }
 
 repositories {
-	maven {
-		url 'http://127.0.0.1:8001/repository/chengweiou/'
-		credentials {
-			username 'admin'
-			password 'admin123'
-		}
-	}
+	maven { url uri('https://maven.pkg.github.com/chengweiou/blackhole') }
 	mavenCentral()
 }
 
@@ -29,7 +23,7 @@ dependencies {
 
 	implementation 'com.google.firebase:firebase-admin:7.3.0'
     
-	implementation 'chengweiou.universe:blackhole:0.0.31@jar'
+	implementation 'chengweiou.universe:blackhole:0.0.33'
 	implementation 'com.google.code.gson:gson:2.8.7'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 		// for log4j2 yml
