update spring fix config bug, use blackhole dio

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - ~/Desktop/docker/universe/leob:/proj
     working_dir: /proj/
     image: openjdk
-    command: java -jar ser.jar --spring.config.location=optional:classpath:/,optional:classpath:/config/,optional:file:./,optional:file:./config/
-    depends_on: 
+    command: java -jar ser.jar
+    depends_on:
       - redis
   pgsql:
     container_name: pgsql
