--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-	id 'org.springframework.boot' version '2.5.0'
+	id 'org.springframework.boot' version '2.5.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
 }
 
 group = 'chengweiou.universe'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 configurations {
 	compileOnly {
@@ -15,7 +15,13 @@ configurations {
 }
 
 repositories {
-	maven { url uri('https://maven.pkg.github.com/chengweiou/blackhole') }
+	maven {
+		url = uri('https://maven.pkg.github.com/chengweiou/blackhole')
+		credentials {
+			username = project.findProperty('gpr.user') ?: System.getenv('USERNAME')
+			password = project.findProperty('gpr.key') ?: System.getenv('TOKEN')
+		}
+	}
 	mavenCentral()
 }
 
@@ -23,8 +29,8 @@ dependencies {
 
 	implementation 'com.google.firebase:firebase-admin:8.1.0'
 
-	implementation 'chengweiou.universe:blackhole:0.0.35'
-	implementation 'com.google.code.gson:gson:2.8.7'
+	implementation 'chengweiou.universe:blackhole:0.0.42'
+	implementation 'com.google.code.gson:gson:2.8.9'
 	implementation 'org.apache.commons:commons-lang3:3.12.0'
 		// for log4j2 yml
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
