--- a/src/main/resources/application-uat.yml
+++ b/src/main/resources/application-uat.yml
@@ -11,3 +11,9 @@ api:
   fcm:
     keyPath: /proj/config/leob-key.json
     dbUrl: https://leob-bd12a.firebaseio.com
+
+proj:
+  pushNum: true
+  notifyTypeList:
+    - none
+    - chat
